# narval_stonefish

./: README.md  package.xml  setup.cfg  setup.py
config/: params.yaml  windturbine_bluerov2.yaml  wreckage_bluerov2.yaml
data/coral/: model_low.mtl
data/seabed/: model_01.mtl
data/wreckage/: model.mtl
launch/: sea.launch.py  tank.launch.py  windturbine_bluerov2.launch.py  wreckage_bluerov2.launch.py
rviz/: tank_bluerov2.rviz  tank_bluerov2_imu.rviz  wreckage_bluerov2.rviz
scenarios/: bluerov2.scn  narval.scn  sea.scn  tank.scn  valve.scn  windturbine_bluerov2.scn  wreckage_bluerov2.scn
