<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>narval_stonefish</name>
  <version>0.0.1</version>
  <description>Narval simulation</description>
  <maintainer email="piotrflak@student.agh.edu.pl">Piotr Flak</maintainer>
  <license>Apache-2.0</license>

  <author>Piotr Flak</author>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>